--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     <!-- <div class="breaker"></div> -->
     <div class="breaker"></div>
     <!-- <info class="after">
-<div class="fb-like" data-href="http://xn--vitoss-jk8b.vn{{ page.url }}" data-send="false" data-width="550" data-show-faces="false" data-font="arial"></div>
+<div class="fb-like" data-href="http://manhhung.cf{{ page.url }}" data-send="false" data-width="550" data-show-faces="false" data-font="arial"></div>
     </info> -->
   </div>
 </div>
