--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
       <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-2-2.png" width="160" height="50" alt="Signature"></a></h1>
       <ul class="navigation">
         <li><a href="/photos/"{% if page.url contains "/photos/" %}class="active"{% endif %} title="Từ Flickr">Kho ảnh</a></li>
-        <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Lưu trữ">Lưu trữ</a></li>
+        <li><a href="/blog/"{% if page.url contains "/blog/" %}class="active"{% endif %} title="Blog">Blog</a></li>
       </ul>
     </header>
     <!--div class="wrapper content"-->
